Version 3.3.? ???
==================
- Trivial changes to tests.

Version 3.3.2 - 2018-01-04
==========================
Bug fix (in setup.py) to address installation problems on some systems.

Version 3.3.1 - 2017-01-02
==========================
Bug fix that allows code to work on Windows (fixes type mismatch having to do
with different conventions for integer lengths).

Version 3.3 - 2017-01-02
==========================
vegas.PDFIntegrator rewritten to make it more efficient.
The interface is the same.

Version 3.2 - 2016-11-20
========================
MPI (multi-processor) support is now integrated into vegas
and automatically avaible for any integrand without modifying
its code --- simply run the code using, for example,

  mpirun -np 4 python your-code.py

to distribute integrand evaluations over 4 processes (and processors if you
have that many). You no longer need to convert the integrand using
vegas.MPIintegrator; MPIintegrator is no longer needed for anything. I left it
in vegas for legacy purposes, but you should discontinue its use.

Other changes:

- The stopping conditions (atol and rtol) now work. I forgot to install
  the stopping conditions in earlier versions, mostly because I never use
  them. These stopping conditions can be quite unreliable in early iterations,
  before vegas has converged --- use them with caution if you use them at all.
  Thanks to Kevin Andrade for pointing out that they were not working.

- Given output r from a vegas integrator, added new option to r.summary().
  Using r.summary(extended=True) appends a table showing the final results
  for every component of the integrand (not just the part used to adapt
  vegas).

- Extra documentation on how to access integrands written in C or
  Fortran from Python vegas. New (simpler) documentation on using MPI.

Version 3.1 - 2016-11-05
========================
Added new class PDFIntegrator for evaluating expectation values weighted